<resources>
    <string name="app_name">SeoulGo</string>
    <string name="noti_tilte">"근처에 퍼즐 조각이 있어요!"</string>
    <string name="noti_text">"얻으러 가시겠습니까?!"</string>
    <string name="gps_dialog_title_text">"위치정보 사용 </string>
    <string name="gps_dialog_content_text">"서울 고에서 정확한 위치 서비스를 위해 현재 위치 정보를 사용하고자 합니다."\n"동의 하시겠습니까?</string>
    <string name="ok_text">"동의"</string>
    <string name="cancle_text">"취소"</string>
    <string name="btn_collection">"도감"</string>
    <string name="btn_home">"홈"</string>
    <string name="btn_setting">"포토존"</string>
    <string name="gone_text">"닫기"</string>
    <string name="info_text">"정보"</string>
    <string name="language_text">"언어"</string>
    <string name="shared_text">"공유"</string>
    <string name="coupon_text">"제휴"</string>
    <string name="place_one">"경복궁"</string>
    <string name="place_two">"창경궁"</string>
    <string name="place_three">"덕수궁"</string>
    <string name="place_four">"창덕궁"</string>
    <string name="place_one_content">"경복궁에 오신것을 환영합니다."</string>
    <string name="place_two_content">"창경궁에 오신것을 환영합니다."</string>
    <string name="place_three_content">"덕수궁에 오신것을 환영합니다."</string>
    <string name="place_four_content">"창덕궁에 오신것을 환영합니다."</string>
    <string name="place_one_button">"시작"</string>
    <string name="place_two_button">"위치"</string>
    <string name="place_three_button">"요금"</string>
    <string name="place_four_button">"시간"</string>
    <string name="permit_text">""권한을 허용을 하셔야 서비스를 이용하실수 있습니다.""</string>
    <string name="getcoupon_text">"쿠폰 받기"</string>
    <string name="processcoupon_text">"진행중"</string>
    <string name="viewpager_one_text">"서울고에서 추천하는 경복궁 포토존"</string>
    <string name="viewpager_two_text">"서울고에서 추천하는 창경궁 포토존"</string>
    <string name="viewpager_three_text">"서울고에서 추천하는 덕수궁 포토존"</string>
    <string name="viewpager_content_one">"경복궁 앞에서"</string>
    <string name="viewpager_content_two">"창경궁 앞에서"</string>
    <string name="viewpager_content_three">"덕수궁 앞에서"</string>
    <string name="viewpager_content_four">"창덕궁 앞에서"</string>
    <string name="possesion_coupon">"보유 쿠폰"</string>
    <string name="alliance_coupon">"제휴사"</string>
    <string name="use_coupon_text">"쿠폰 사용"</string>
    <string name="use_coupon_content">"쿠폰을 사용하시겠습니까? \n동의를 누를 시 삭제되니 확인하시고 누르시길 바랍니다."</string>
    <string name="use_text">"사용"</string>
    <string name="language_select_text">"언어 선택"</string>
    <string name="ko_language">"한국어"</string>
    <string name="un_language">"영어"</string>
    <string name="jp_language">"일본어"</string>
    <string name="ch_language">"중국어"</string>
    <string name="info_name">"정보"</string>
    <string name="info_using">"사용법"</string>
    <string name="info_using_ex">"기능 사용법, 쿠폰 사용법"</string>
    <string name="info_caution">"주의사항"</string>
    <string name="info_caution_ex">"이용시 주의사항"</string>
    <string name="info_mail">"문의"</string>
    <string name="info_mail_ex">"개선점, 불편한점 문의하기"</string>
    <string name="info_mail_mail">"이메일 보내기"</string>
    <string name="developer_one">"고블린-개발자"</string>
    <string name="developer_two">"꼬맹이-개발자"</string>
    <string name="developer_three">"셀카맨-개발자"</string>
    <string name="developer_four">"덩치-개발자"</string>
    <string name="hint_text">"클릭하면 힌트가 나옵니다."</string>
    <string name="collection_finish">"모든 퍼즐 조각을 완성했어요! \n 쿠폰을 받으러 이동하시겠습니까?"</string>
    <string name="move_text">"이동"</string>
     <string name="place_one_explain_time">"\n"
                    "※매주 화요일은 휴궁일\n"
                    "\n"
                    "* 1월 ~ 2월\t: 09:00~17:00\n  (입장마감은 16:00)\n"
                    "* 3월 ~ 5월\t: 09:00~18:00\n  (입장마감은 17:00)\n"
                    "* 6월 ~ 8월\t: 09:00~18:30\n  (입장마감은 17:30)\n"
                    "* 9월 ~ 10월\t: 09:00~18:00\n  (입장마감은 17:00)\n"
                    "* 11월 ~ 12월\t: 09:00~17:00\n  (입장마감은 16:00)\n"
                    "* 기관 사정에 따라 관람시간 단축 및\n조정이 있을 수 있습니다.\n"</string>
    <string name="place_two_explain_time">"\n"
        "※매주 월요일은 휴관일입니다.\n"
        "* 2월 ~ 5월\t: 09:00~18:00\n"
        "* 6월 ~ 8월\t: 09:00~18:30\n"
        "* 9월 ~ 10월\t: 09:00~18:00\n"
        "* 11월 ~ 1월\t: 09:00~17:30\n"</string>
    <string name="place_three_explain_time">
                            "\n"
                    "※매주 월요일은 휴관일입니다.\n"
                    "매표 및 입장시간\t09:00 ~ 20:00\n"
                    "퇴장시간\t09:00 ~ 21:00\n"
    </string>
    <string name="place_one_explain_price"> "\t대인(만25세~만64세) - \t3,000원\n"
                            "\t대인(10인이상) - \t2,400원\n"
                            "\n"
                            "\t\t-무료입장-\n"
                            "* 만24세 이하 청소년\n"
                            "* 만65세 이상 어르신\n"
                            "* 장애인(3급 이상은 보호자 1인\n  동반, 4급 이하는 본인만 무료)\n"
                            "* 한복을 착용한 자"</string>
    <string name="place_two_explain_price"> "\t대인(만25세~만64세) - \t1,000원\n"
                            "\t대인(10인이상) - \t800원\n"
                            "\n"
                            "\t\t-무료입장-\n"
                            "* 만 6세 이하 어린이\n* 만 7세~24세 이하 청소년\n* 만 65세 이상 국민(신분증 지참)\n"
                            "* 한복을 착용한 자"</string>
    <string name="place_three_explain_price">"\t대인(만25세~만64세) - \t1,000원\n"
                            "\t대인(10인이상) - \t800원\n"
                            "\n"
                            "\t\t-무료입장-\n"
                            "* 만24세 이하 청소년 \n"
                            "* 만65세 이상 어르신 \n"
                            "* 장애인(3급 이상은 보호자 1인 \n  동반) \n"
                            "* 한복착용자"</string>
    <string name="info_use_explain">"기능 사용법\n"
                            "\n1. 사용자가 가고싶은 관광명소 사진을 누른다.\n"
                            "2. 위치, 요금, 시간을 확인한다.\n"
                            "3. 관광명소에 도착해서 '시작'버튼을 누른다.\n"
                            "4. 무작위로 선정된 장소에 가서 조각을 모은다.\n"
                            "5. 중간 중간 포토존에서 사진을 찍으면서 추억을 남긴다.\n"
                            "6. 조각을 다 모은후 도감메뉴로 이동 후 '쿠폰받기' 버튼을 누른다.\n"
                            "\n"
                            "쿠폰 사용법\n"
                            "\n1. 쿠폰 메뉴로 가서 사용자가 가지고 있는 쿠폰을 확인한다.\n"
                            "2. 제휴사에 가서 어떤 장소를 할인 받을 수 있는지 확인한다.\n"
                            "3. 장소를 선택 후 가서 신나게 할인을 받는다~~\n"
    </string>
    <string name="info_caution_explain">"주의사항\n"
                            "\n1. 조각을 누르기 위해 핸드폰만 보고있으면 다른사람들과 쿵!\n"
                            "2. 쿠폰은 발급된 관광지 주변에서만 쓸 수 있어요!\n"
                            "ex) 경복궁 쿠폰을 가지고 다른곳에서 쓰려면 NoNo~!\n"
    </string>
    <string-array name="gyeongbokgung_store">
        <item>"아시안 쿠진"</item>
        <item>"미라보쇼콜라"</item>
        <item>"아우네 빈대떡"</item>
        <item>"잘 빠진 매밀"</item>
    </string-array>
    <string-array name="deoksugung_store">
        <item>"사누키야"</item>
        <item>"태평 식당"</item>
        <item>"무교동 2낙지"</item>
    </string-array>
    <string-array name="changgyeonggung_store">
        <item>"영웅"</item>
    </string-array>
    <string-array name="gyeongbokgung_coupon_content">
        <item>"10% 할인"</item>
        <item>"10% 할인"</item>
        <item>"음료수 증정"</item>
        <item>"음료수 증정""</item>
    </string-array>
    <string-array name="deoksugung_coupon_content">
        <item>"10% 할인"</item>
        <item>"음료수 증정"</item>
        <item>"조건부 할인"</item>
    </string-array>
    <string-array name="changgyeonggung_coupon_content">
        <item>"음료수 증정"</item>
    </string-array>
    <string name="photo_expand_text">"자세히 보기"</string>
    <string-array name="gyeongbokgung_photo_content">
        <item>"근정전 앞에서"</item>
        <item>"외소주방 돌담 앞에서"</item>
        <item>"기념품점 나무 앞에서"</item>
        <item>"근정전 앞에서"</item>
        <item>"향원전 앞에서"</item>
    </string-array>
    <string-array name="changgyeonggung_photo_content">
        <item>"영춘헌 앞에서"</item>
        <item>"양화당 계단"</item>
        <item>"경춘전 뒷길에서"</item>
        <item>"영춘헌 옆 큰돌위에서"</item>
        <item>"명정전 앞에서"</item>
    </string-array>
    <string-array name="deoksugung_photo_content">
        <item>"석조관 계단 앞에서"</item>
        <item>"즉조당 뒤 산책길 나무 앞에서"</item>
        <item>"즉조당 뒤 산책길"</item>
        <item>"함녕전 앞 산책길"</item>
        <item>분수대 앞에서"</item>
    </string-array>
    <string-array name="changdeokgung_photo_content">
        <item>"선정전 앞에서"</item>
        <item>"금천교 앞에서"</item>
        <item>"선정전 돌담에서"</item>
        <item>"인정전 앞에서"</item>
        <item>"희정당 안에서"</item>
    </string-array>
    <string name="viewpager_four_text">"서울고에서 추천하는 창덕궁 포토존"</string>
    <string-array name="gyeongbokgung_minimap_location">
        <item>"광화문과 궁궐 담장"</item>
        <item>"근정전 일원"</item>
        <item>"사정전 일원"</item>
        <item>"강녕전과 교태전"</item>
        <item>"흠경각과 함원전"</item>
        <item>"자경전 일원"</item>
        <item>"동궁 일원"</item>
        <item>"함화당과 집경당"</item>
        <item>"향원정과 건청궁"</item>
        <item>"집옥재 일원"</item>
        <item>"태원전 일원"</item>
        <item>"경희루"</item>
        <item>"수정전과 궐내각사"</item>
        <item>"소주방"</item>
    </string-array>
    <string-array name="changgyeonggung_minimap_location">
        <item>"홍화문"</item>
        <item>"옥천교"</item>
        <item>"명정문"</item>
        <item>"명정전"</item>
        <item>"문정전"</item>
        <item>"숭문당"</item>
        <item>"빈양문"</item>
        <item>"함인정"</item>
        <item>"경춘전"</item>
        <item>"환경전"</item>
        <item>"통명전"</item>
        <item>"양화당"</item>
        <item>"영춘헌,집복헌"</item>
        <item>"풍기대"</item>
        <item>"성종태실 및 태실비"</item>
        <item>"춘당지"</item>
        <item>"팔각7층석탑"</item>
        <item>"대온실(식물원)"</item>
        <item>"관덕정"</item>
        <item>"관천대"</item>
        <item>"선인문"</item>
        <item>"함양문"</item>
        <item>"과학의문"</item>
        <item>"월근문"</item>
        <item>"관리사무소"</item>
        <item>"집춘문"</item>
    </string-array>
    <string-array name="deoksugung_minimap_location">
        <item>"대한문 일원"</item>
        <item>"중화전 일원"</item>
        <item>"즉조당 일원"</item>
        <item>"함녕전과 덕흥전"</item>
        <item>"정관현"</item>
        <item>"석조전 일원"</item>
        <item>"궐내각사 터와 환구단"</item>
        <item>"석원전 터 일원"</item>
        <item>"중명전 일원"</item>
    </string-array>
    <string-array name="changdeokgung_minimap_location">
        <item>"돈화문"</item>
        <item>"인정전"</item>
        <item>"	선정전"</item>
        <item>"희정당"</item>
        <item>"대조전"</item>
        <item>"후원 매표소 앞"</item>
        <item>"궐내각사"</item>
        <item>"금천교"</item>
    </string-array>
    <string name="gyeongbokgung_explain"> "한양의 중심이었던 조선 왕조 제일의 법궁 경복궁은 1395년에 창건한 조선 왕조 제일의 법궁(法宮, 임금이 사는 궁궐)이다. 북으 로 백악산(지금의 북악산)을 기대어 자리
    잡았고, 정문인 광화문 앞으로 넓은 육조거리(지금 의 세종로)가 펼쳐진 한양(서울)의 중심이었다. 이후 확장과 중건을 거듭하다가 1592년에 임 진왜란으로 인해 전소되고
    말았다. 그 후 경복궁은 270여 년간 복구되지 못하고 방치되다가 1867년에 이르러서야 흥선대원군의 주도로 중건되었다. 중건한 경복궁은 500여 동의 건물들 이 미로같이
    빼곡히 들어선 웅장한 모습이었다. 궁궐 안에는 왕과 관리들이 정무를 보던 외전 과 관청들, 왕족과 궁인들의 생활을 위한 내전과 건물들, 휴식을 위한 정원 시설들을 조성했
    다. 또한 왕비의 중궁, 세자의 동궁, 고종이 세운 건청궁 등 크고 작은 궁들이 복잡하게 들어 선 궁궐 복합체이기도 했다. 그러나 국권의 상징이었던 경복궁은 일제강점기 때
    계획적으로 훼손되었다. 1911년에 경 복궁 부지의 소유권은 조선총독부로 넘어갔으며, 1915년에는 조선물산공진회를 개최한다는 명목으로 주요 전각 몇 채를 제외하고 90%
    이상의 전각이 헐렸다. 조선물산공진회를 계기로 일제는 경복궁을 본격적으로 파괴했고, 조선총독부 청사를 지어 궁궐 자체를 가려 버렸다. 다 행히 1990년부터 본격적인
    복원사업을 추진해 옛 조선총독부 건물을 철거하고 흥례문 일원을 복원했으며, 2010년에는 광화문이 원형복원되었다. " </string>
    <string name="changgyeonggung_explain">"자연미와 왕실 생활이 조화를 이룬 궁궐
         창경궁은 조선 9대 임금인 성종이 1483년(1484년 완공) 창덕궁 동쪽에 세운 궁궐이다.
         창덕궁 과 경계 없이 하나의 궁궐로 사용하여 둘을 합쳐 동궐(東闕)이라 칭하였다. 창경궁 터의 역사 는 고려까지 거슬러 올라간다.
         세종이 즉위한 1418년 고려의 남경(南京) 이궁(離宮) 터에 상왕 태종을 위해 수강궁(壽康宮)을 세운 것이다.
         성종은 창덕궁이 좁아 세 명의 대비를 위한 공간 으로 수강궁을 확장 보완하면서 공사 도중 창경궁이라는 이름을 붙였다.
         창경궁은 창건 초기에 는 쓰임새가 그다지 많지 않았으나, 임진왜란 이후 창덕궁이 정궁 역할을 하면서 이궁(離宮)으 로서 활용 빈도가 높아졌다."</string>
</resources>