<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:background="@drawable/box01"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/gps_dialog_title_text"
            android:textColor="#000000"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal|left"
            android:text="@string/gps_dialog_content_text"
            android:textColor="#111111"
            android:textSize="13dp" />

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ok_btn"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_background"
                android:text="@string/ok_text"
                android:textColor="@color/join2_btn_color" />

            <Button
                android:id="@+id/cancle_btn"
                android:layout_width="100dp"
                android:layout_height="48dp"
                android:layout_gravity="right"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/button_background"
                android:text="@string/cancle_text"
                android:textColor="@color/join2_btn_color" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>