<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/info_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="#ffffff">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/info_text"
                    android:textColor="@color/theme_text"
                    android:textSize="20sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#000000" />

            <LinearLayout
                android:id="@+id/info_usemethod1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/info_usemethod2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/theme3"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/info_usemethod3"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/usemethod" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/info_using"
                        android:textColor="#000000" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/info_using_ex"
                        android:textColor="#a8a7a7" />
                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c8c6c6" />

            <LinearLayout
                android:id="@+id/info_usemethod_explain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/info_use_explain"
                    android:textColor="#000000" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c8c6c6" />

            <LinearLayout
                android:id="@+id/info_caution1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/info_caution2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/theme3"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/info_caution3"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/caution" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/info_caution"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/info_caution_ex"
                        android:textColor="#a8a7a7" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c8c6c6" />


            <LinearLayout
                android:id="@+id/info_caution_explain"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/info_caution_explain"
                    android:textColor="#000000" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c8c6c6" />

            <LinearLayout
                android:id="@+id/info_mail1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/info_mail2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/theme3"
                    android:gravity="center">

                    <ImageButton
                        android:id="@+id/info_mail3"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/mail" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/info_mail"
                        android:textColor="#000000" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/info_mail_ex"
                        android:textColor="#a8a7a7" />

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#c8c6c6" />

            <LinearLayout
                android:id="@+id/info_mail_explain"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/info_mail"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/yun"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@color/theme3"
                            android:gravity="center_vertical">

                            <Button
                                android:id="@+id/yun1"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginLeft="10dp"
                                android:background="@drawable/mail"
                                android:gravity="center"
                                android:textColor="#000000" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:gravity="center"
                                android:text="@string/developer_one"
                                android:textColor="#ffffff"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/lee"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@color/theme3"
                            android:gravity="center_vertical">

                            <Button
                                android:id="@+id/lee1"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginLeft="10dp"
                                android:background="@drawable/mail"
                                android:textColor="#000000" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:gravity="center"
                                android:text="@string/developer_two"
                                android:textColor="#ffffff"
                                android:textSize="15sp" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/park"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@color/theme3"
                            android:gravity="center_vertical">

                            <Button
                                android:id="@+id/park1"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginLeft="10dp"
                                android:background="@drawable/mail"
                                android:textColor="#000000" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:gravity="center"
                                android:text="@string/developer_three"
                                android:textColor="#ffffff"
                                android:textSize="15sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/pig"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:background="@color/theme3">

                            <Button
                                android:id="@+id/pig1"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_marginLeft="10dp"
                                android:background="@drawable/mail"
                                android:textColor="#000000" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginLeft="10dp"
                                android:gravity="center"
                                android:text="@string/developer_four"
                                android:textColor="#ffffff"
                                android:textSize="15sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#c8c6c6" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>