<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grid_view_backgroud"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="20dp"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/viewpager_one_text"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <android.support.v4.view.ViewPager
                    android:id="@+id/gyeongbokgung_photo"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginRight="10dp"
                    android:clipToPadding="false"></android.support.v4.view.ViewPager>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="20dp"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/viewpager_two_text"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <android.support.v4.view.ViewPager
                    android:id="@+id/changgyeonggung_photo"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginRight="10dp"
                    android:clipToPadding="false"></android.support.v4.view.ViewPager>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="20dp"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/viewpager_three_text"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <android.support.v4.view.ViewPager
                    android:id="@+id/deoksugung_photo"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginRight="10dp"
                    android:clipToPadding="false"></android.support.v4.view.ViewPager>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="20dp"
                android:background="@color/white"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/viewpager_four_text"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <android.support.v4.view.ViewPager
                    android:id="@+id/changdeokgung_photo"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginRight="10dp"
                    android:clipToPadding="false"></android.support.v4.view.ViewPager>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</LinearLayout>


